# text_analyzer

./: Cargo.toml  README.md
src/: main.rs
test/: test1.txt
