[package]
name = "text_analyzer"
version = "0.1.1"
authors = ["Owen Zonneveld <owenzonneveld@gmail.com>"]
license = "Apache-2.0"
description = "Tool that counts the occurence of each letter"
readme = "README.md"
homepage = "https://github.com/TheOfficialOzone/text_analyzer.git"
repository = "https://github.com/TheOfficialOzone/text_analyzer.git"
keywords = ["cli", "text", "analyzer"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]